# opengl-starter

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp  opengl.h  window.h
src/platform/: null_opengl.cpp  null_window.cpp  win32_opengl.cpp  win32_window.cpp
test/: CMakeLists.txt
